# swisstronik-chain

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitmodules  .swtr_seed  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  config.yml  docker-compose.yml  docker.env.example  flake.nix  go.mod  go.sum  go_repositories.bzl  go_repositories_extra.bzl  local-network.yml  readme.md  test-dcap.sh
app/: BUILD.bazel  app.go  app_config.go  encoding.go  export.go  genesis.go  setup_handler.go  sim_test.go  simulation_test.go  utils.go
app/ante/: BUILD.bazel  ante.go  ante_test.go  eip712.go  eth.go  eth_test.go  fee_checker.go  fee_checker_test.go  fee_market.go  fee_market_test.go  fees.go  fees_test.go  handler_options.go  interfaces.go  reject_msgs.go  reject_nested_msgs.go  reject_nested_msgs_test.go  setup.go  setup_test.go  signverify_test.go  sigs_test.go  sigverify.go  utils_test.go  vesting.go  vesting_test.go
app/params/: BUILD.bazel
app/simulation/: app_after_import_test.go  app_import_export_test.go  app_state_determinism_test.go  app_test.go  genesis.go  utils.go
app/upgrades/: types.go
app/upgrades/v1.0.0/: constants.go  upgrade.go
app/upgrades/v1_0_1/: constants.go  upgrades.go
app/upgrades/v1_0_3/: constants.go  upgrades.go
app/upgrades/v1_0_4/: constants.go  upgrades.go
app/upgrades/v1_0_5/: constants.go  upgrades.go
app/upgrades/v1_0_6/: constants.go  upgrades.go
app/upgrades/v1_0_7/: constants.go  upgrades.go
app/upgrades/v1_0_8/: constants.go  upgrades.go
app/upgrades/v2.0.0/: constants.go  upgrade.go
client/: BUILD.bazel  config.go  config_test.go  export.go  import.go  keys.go  testnet.go
client/keys/: BUILD.bazel  add.go  utils.go
cmd/swisstronikd/: BUILD.bazel  main.go
cmd/swisstronikd/cmd/: BUILD.bazel  cli_root.go  config.go  config_test.go  convertaccount.go  debug.go  enclave.go  genaccounts.go  init.go  root.go  testnet.go
crates/static-precompiles/: Cargo.toml
crates/static-precompiles/.cargo/: config
crates/static-precompiles/src/: blake2f.rs  bn128.rs  curve25519.rs  datacopy.rs  ec_recover.rs  lib.rs  modexp.rs  ripemd160.rs  secp256r1.rs  sha256.rs  sha3fips.rs
crypto/codec/: BUILD.bazel  amino.go  codec.go
crypto/deoxys/: BUILD.bazel  encryption.go  encryption_test.go
crypto/ethsecp256k1/: BUILD.bazel  ethsecp256k1.go
crypto/hd/: BUILD.bazel  algorithm.go  algorithm_test.go  benchmark_test.go
docs/: BUILD.bazel
docs/static/: openapi.yml
encoding/: BUILD.bazel  config.go  config_test.go
encoding/codec/: BUILD.bazel  codec.go
ethereum/eip712/: BUILD.bazel  eip712.go  eip712_fuzzer_test.go  eip712_legacy.go  eip712_test.go  encoding.go  encoding_legacy.go  message.go  preprocess.go  preprocess_test.go  types.go
go-sgxvm/: .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  go.mod  go.sum  lib.go  lib_test.go
go-sgxvm/builders/: README.md
go-sgxvm/builders/guest/: build_linux.sh  build_macos.sh  (+1 more)
go-sgxvm/docs/: libwasmvm_builds.py
go-sgxvm/go_protobuf_gen/: BUILD.bazel  ffi.pb.go  node.pb.go
go-sgxvm/proto/: node.proto
go-sgxvm/sgx-evm/: .gitignore  Cargo.toml
go-sgxvm/sgx-wrapper/: Cargo.toml  cbindgen.toml
go-sgxvm/src/: cache.rs  dcap.rs  enclave.rs  lib.rs  main.rs  ocall.rs
go-sgxvm/types/: BUILD.bazel  ffi.pb.go  mocked_connector.go  mocked_db.go  node.pb.go
ibc/: BUILD.bazel  module.go  module_test.go  utils.go  utils_test.go
ibc/testing/: BUILD.bazel  README.md  app.go  chain.go  coordinator.go  endpoint.go  path.go
indexer/: BUILD.bazel  kv_indexer.go  kv_indexer_test.go
rpc/: BUILD.bazel  apis.go  websockets.go
rpc/backend/: BUILD.bazel  account_info.go  account_info_test.go  backend.go  backend_suite_test.go  blocks.go  blocks_test.go  call_tx.go  call_tx_test.go  chain_info.go  chain_info_test.go  client_test.go  did.go  evm_query_client_test.go  feemarket_query_client_test.go  filters_test.go  node_info.go  node_info_test.go  sign_tx.go  sign_tx_test.go  tracing.go  tracing_test.go  tx_info.go  tx_info_test.go  utils.go
rpc/stream/: queue_test.go  rpc.go
rpc/types/: BUILD.bazel  block.go  events.go  events_test.go  query_client.go  utils.go
server/: BUILD.bazel  cli_util.go  cmt_rpc.go  indexer_cmd.go  indexer_service.go  json_rpc.go  start.go  util.go
server/config/: BUILD.bazel  config.go  config_test.go  toml.go
server/flags/: BUILD.bazel  flags.go
sgxvm/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  bindings.h  rust-toolchain
sgxvm/.cargo/: config
sgxvm/deoxysii-rust/: Cargo.toml
sgxvm/proto/: ffi.proto
sgxvm/src/: backend.rs  coder.rs  encryption.rs  key_manager.rs  lib.rs  memory.rs  ocall.rs  querier.rs  storage.rs  types.rs  updated_backend.rs  updated_invoker.rs  utils.rs
tests/: BUILD.bazel  signer.go  utils.go
tests/ibc/: .env  docker-compose.yml  run-relayer.sh
tests/integration_tests/: cosmoscli.py  test_priority.py  test_upgrade.py
tests/rpc/: BUILD.bazel  net_test.go  rpc_pending_test.go  rpc_test.go  ws_test.go
tests/rpc-benchmark/: benchmark.yml  readme.md
tests/rpc-request-benchmark/: benchmark.yml  readme.md
tests/solidity/: .env.example  hardhat.config.js  package-lock.json  package.json
tests/stress/: index.js  package-lock.json
tests/tx-benchmark/: .env.example  index.js  package-lock.json  package.json
tests/websocket/: .env.example  README.md  index.js  package-lock.json  package.json
testutil/: BUILD.bazel  abci.go  address.go  ante.go  fund.go  integration.go  signer.go
testutil/did/: BUILD.bazel  did.go
testutil/keeper/: BUILD.bazel  compliance.go  did.go  swisstronik.go  vesting.go
testutil/network/: BUILD.bazel  network.go  network_test.go  util.go
testutil/nullify/: BUILD.bazel
testutil/sample/: BUILD.bazel
testutil/tx/: cosmos.go  eip712.go  eth.go  signer.go
types/: BUILD.bazel  account.go  account_test.go  chain_id.go  codec.go  coin.go  dynamic_fee.pb.go  encoding.go  gasmeter.go  validation_test.go  web3.pb.go
types/tests/: BUILD.bazel  test_utils.go
utils/: BUILD.bazel  utils.go  utils_test.go
(+646 files in other folders)
