load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix swisstronik
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)
