load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "app",
    srcs = [
        "app.go",
        "encoding.go",
        "export.go",
        "genesis.go",
        "utils.go",
    ],
    importpath = "swisstronik/app",
    visibility = ["//visibility:public"],
    deps = [
        "//app/ante",
        "//app/params",
        "//docs",
        "//encoding",
        "//server/flags",
        "//types",
        "//x/did",
        "//x/did/keeper",
        "//x/evm",
        "//x/evm/keeper",
        "//x/evm/types",
        "//x/feemarket",
        "//x/feemarket/keeper",
        "//x/feemarket/types",
        "//x/vesting",
        "//x/vesting/keeper",
        "@com_github_cosmos_cosmos_sdk//baseapp",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//client/grpc/node",
        "@com_github_cosmos_cosmos_sdk//client/grpc/tmservice",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/codec",
        "@com_github_cosmos_cosmos_sdk//crypto/keys/secp256k1",
        "@com_github_cosmos_cosmos_sdk//server/api",
        "@com_github_cosmos_cosmos_sdk//server/config",
        "@com_github_cosmos_cosmos_sdk//server/types",
        "@com_github_cosmos_cosmos_sdk//simapp",
        "@com_github_cosmos_cosmos_sdk//simapp/params",
        "@com_github_cosmos_cosmos_sdk//std",
        "@com_github_cosmos_cosmos_sdk//store/types",
        "@com_github_cosmos_cosmos_sdk//testutil/mock",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/module",
        "@com_github_cosmos_cosmos_sdk//version",
        "@com_github_cosmos_cosmos_sdk//x/auth",
        "@com_github_cosmos_cosmos_sdk//x/auth/keeper",
        "@com_github_cosmos_cosmos_sdk//x/auth/posthandler",
        "@com_github_cosmos_cosmos_sdk//x/auth/simulation",
        "@com_github_cosmos_cosmos_sdk//x/auth/tx",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_cosmos_sdk//x/authz",
        "@com_github_cosmos_cosmos_sdk//x/authz/keeper",
        "@com_github_cosmos_cosmos_sdk//x/authz/module",
        "@com_github_cosmos_cosmos_sdk//x/bank",
        "@com_github_cosmos_cosmos_sdk//x/bank/keeper",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_cosmos_cosmos_sdk//x/capability",
        "@com_github_cosmos_cosmos_sdk//x/capability/keeper",
        "@com_github_cosmos_cosmos_sdk//x/capability/types",
        "@com_github_cosmos_cosmos_sdk//x/crisis",
        "@com_github_cosmos_cosmos_sdk//x/crisis/keeper",
        "@com_github_cosmos_cosmos_sdk//x/crisis/types",
        "@com_github_cosmos_cosmos_sdk//x/distribution",
        "@com_github_cosmos_cosmos_sdk//x/distribution/client",
        "@com_github_cosmos_cosmos_sdk//x/distribution/keeper",
        "@com_github_cosmos_cosmos_sdk//x/distribution/types",
        "@com_github_cosmos_cosmos_sdk//x/evidence",
        "@com_github_cosmos_cosmos_sdk//x/evidence/keeper",
        "@com_github_cosmos_cosmos_sdk//x/evidence/types",
        "@com_github_cosmos_cosmos_sdk//x/feegrant",
        "@com_github_cosmos_cosmos_sdk//x/feegrant/keeper",
        "@com_github_cosmos_cosmos_sdk//x/feegrant/module",
        "@com_github_cosmos_cosmos_sdk//x/genutil",
        "@com_github_cosmos_cosmos_sdk//x/genutil/types",
        "@com_github_cosmos_cosmos_sdk//x/gov",
        "@com_github_cosmos_cosmos_sdk//x/gov/client",
        "@com_github_cosmos_cosmos_sdk//x/gov/keeper",
        "@com_github_cosmos_cosmos_sdk//x/gov/types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1:types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1beta1",
        "@com_github_cosmos_cosmos_sdk//x/group",
        "@com_github_cosmos_cosmos_sdk//x/group/keeper",
        "@com_github_cosmos_cosmos_sdk//x/group/module",
        "@com_github_cosmos_cosmos_sdk//x/mint",
        "@com_github_cosmos_cosmos_sdk//x/mint/keeper",
        "@com_github_cosmos_cosmos_sdk//x/mint/types",
        "@com_github_cosmos_cosmos_sdk//x/params",
        "@com_github_cosmos_cosmos_sdk//x/params/client",
        "@com_github_cosmos_cosmos_sdk//x/params/keeper",
        "@com_github_cosmos_cosmos_sdk//x/params/types",
        "@com_github_cosmos_cosmos_sdk//x/params/types/proposal",
        "@com_github_cosmos_cosmos_sdk//x/slashing",
        "@com_github_cosmos_cosmos_sdk//x/slashing/keeper",
        "@com_github_cosmos_cosmos_sdk//x/slashing/types",
        "@com_github_cosmos_cosmos_sdk//x/staking",
        "@com_github_cosmos_cosmos_sdk//x/staking/keeper",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_cosmos_cosmos_sdk//x/upgrade",
        "@com_github_cosmos_cosmos_sdk//x/upgrade/client",
        "@com_github_cosmos_cosmos_sdk//x/upgrade/keeper",
        "@com_github_cosmos_cosmos_sdk//x/upgrade/types",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/controller/keeper",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/controller/types",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/host",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/host/keeper",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/host/types",
        "@com_github_cosmos_ibc_go_v6//modules/apps/27-interchain-accounts/types",
        "@com_github_cosmos_ibc_go_v6//modules/apps/transfer",
        "@com_github_cosmos_ibc_go_v6//modules/apps/transfer/keeper",
        "@com_github_cosmos_ibc_go_v6//modules/apps/transfer/types",
        "@com_github_cosmos_ibc_go_v6//modules/core",
        "@com_github_cosmos_ibc_go_v6//modules/core/02-client",
        "@com_github_cosmos_ibc_go_v6//modules/core/02-client/client",
        "@com_github_cosmos_ibc_go_v6//modules/core/02-client/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/05-port/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/24-host",
        "@com_github_cosmos_ibc_go_v6//modules/core/keeper",
        "@com_github_cosmos_ibc_go_v6//testing",
        "@com_github_cosmos_ibc_go_v6//testing/types",
        "@com_github_gorilla_mux//:mux",
        "@com_github_rakyll_statik//fs",
        "@com_github_spf13_cast//:cast",
        "@com_github_tendermint_tendermint//abci/types",
        "@com_github_tendermint_tendermint//libs/json",
        "@com_github_tendermint_tendermint//libs/log",
        "@com_github_tendermint_tendermint//libs/os",
        "@com_github_tendermint_tendermint//proto/tendermint/types",
        "@com_github_tendermint_tendermint//types",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)

go_test(
    name = "app_test",
    srcs = ["simulation_test.go"],
    deps = [
        ":app",
        "//encoding",
        "@com_github_cosmos_cosmos_sdk//simapp",
        "@com_github_cosmos_cosmos_sdk//types/simulation",
        "@com_github_cosmos_cosmos_sdk//x/simulation",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tendermint//abci/types",
        "@com_github_tendermint_tendermint//proto/tendermint/types",
        "@com_github_tendermint_tendermint//types",
    ],
)
