load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "config.go",
        "export.go",
        "import.go",
        "keys.go",
        "testnet.go",
    ],
    importpath = "swisstronik/client",
    visibility = ["//visibility:public"],
    deps = [
        "//client/keys",
        "//crypto/ethsecp256k1",
        "//crypto/hd",
        "//server/config",
        "//server/flags",
        "//testutil/network",
        "//types",
        "//x/evm/types",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//client/flags",
        "@com_github_cosmos_cosmos_sdk//client/input",
        "@com_github_cosmos_cosmos_sdk//client/keys",
        "@com_github_cosmos_cosmos_sdk//client/tx",
        "@com_github_cosmos_cosmos_sdk//crypto",
        "@com_github_cosmos_cosmos_sdk//crypto/keyring",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//server",
        "@com_github_cosmos_cosmos_sdk//server/config",
        "@com_github_cosmos_cosmos_sdk//testutil",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/module",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_cosmos_cosmos_sdk//x/crisis/types",
        "@com_github_cosmos_cosmos_sdk//x/genutil",
        "@com_github_cosmos_cosmos_sdk//x/genutil/types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1:types",
        "@com_github_cosmos_cosmos_sdk//x/mint/types",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_tendermint_tendermint//config",
        "@com_github_tendermint_tendermint//libs/cli",
        "@com_github_tendermint_tendermint//libs/rand",
        "@com_github_tendermint_tendermint//proto/tendermint/types",
        "@com_github_tendermint_tendermint//types",
        "@com_github_tendermint_tendermint//types/time",
    ],
)

go_test(
    name = "client_test",
    srcs = ["config_test.go"],
    embed = [":client"],
    deps = [
        "@com_github_cosmos_cosmos_sdk//client/flags",
        "@com_github_spf13_cobra//:cobra",
    ],
)
