load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = ["docs.go"],
    embedsrcs = [
        "static/openapi.yml",
        "template/index.tpl",
    ],
    importpath = "swisstronik/docs",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gorilla_mux//:mux"],
)
