load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rpc",
    srcs = [
        "apis.go",
        "websockets.go",
    ],
    importpath = "swisstronik/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//rpc/backend",
        "//rpc/ethereum/pubsub",
        "//rpc/namespaces/ethereum/debug",
        "//rpc/namespaces/ethereum/did",
        "//rpc/namespaces/ethereum/eth",
        "//rpc/namespaces/ethereum/eth/filters",
        "//rpc/namespaces/ethereum/miner",
        "//rpc/namespaces/ethereum/net",
        "//rpc/namespaces/ethereum/personal",
        "//rpc/namespaces/ethereum/txpool",
        "//rpc/namespaces/ethereum/web3",
        "//rpc/namespaces/utils",
        "//rpc/types",
        "//server/config",
        "//types",
        "//x/evm/types",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//server",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//eth/filters",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_ethereum_go_ethereum//rpc",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_pkg_errors//:errors",
        "@com_github_tendermint_tendermint//libs/log",
        "@com_github_tendermint_tendermint//rpc/jsonrpc/client",
        "@com_github_tendermint_tendermint//types",
    ],
)
