load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "indexer_cmd.go",
        "indexer_service.go",
        "json_rpc.go",
        "start.go",
        "util.go",
    ],
    importpath = "swisstronik/server",
    visibility = ["//visibility:public"],
    deps = [
        "//go-sgxvm",
        "//indexer",
        "//rpc",
        "//rpc/namespaces/ethereum/debug",
        "//server/config",
        "//server/flags",
        "//types",
        "@com_github_cometbft_cometbft//cmd/cometbft/commands",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//client/flags",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//crypto/keyring",
        "@com_github_cosmos_cosmos_sdk//pruning/types",
        "@com_github_cosmos_cosmos_sdk//server",
        "@com_github_cosmos_cosmos_sdk//server/api",
        "@com_github_cosmos_cosmos_sdk//server/config",
        "@com_github_cosmos_cosmos_sdk//server/grpc",
        "@com_github_cosmos_cosmos_sdk//server/rosetta",
        "@com_github_cosmos_cosmos_sdk//server/rosetta/lib/server",
        "@com_github_cosmos_cosmos_sdk//server/types",
        "@com_github_cosmos_cosmos_sdk//telemetry",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//version",
        "@com_github_ethereum_go_ethereum//log",
        "@com_github_ethereum_go_ethereum//metrics/exp",
        "@com_github_ethereum_go_ethereum//rpc",
        "@com_github_gorilla_mux//:mux",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@com_github_rs_cors//:cors",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_tendermint_tendermint//abci/server",
        "@com_github_tendermint_tendermint//libs/log",
        "@com_github_tendermint_tendermint//libs/os",
        "@com_github_tendermint_tendermint//libs/service",
        "@com_github_tendermint_tendermint//node",
        "@com_github_tendermint_tendermint//p2p",
        "@com_github_tendermint_tendermint//privval",
        "@com_github_tendermint_tendermint//proxy",
        "@com_github_tendermint_tendermint//rpc/client",
        "@com_github_tendermint_tendermint//rpc/client/local",
        "@com_github_tendermint_tendermint//rpc/jsonrpc/client",
        "@com_github_tendermint_tendermint//state",
        "@com_github_tendermint_tendermint//store",
        "@com_github_tendermint_tendermint//types",
        "@com_github_tendermint_tm_db//:tm-db",
        "@io_cosmossdk_errors//:errors",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_net//netutil",
    ],
)
