load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tests",
    srcs = ["signer.go"],
    importpath = "swisstronik/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto/ethsecp256k1",
        "@com_github_cosmos_cosmos_sdk//crypto/keyring",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
    ],
)
