load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "account.go",
        "account.pb.go",
        "block.go",
        "chain_id.go",
        "codec.go",
        "coin.go",
        "dynamic_fee.go",
        "dynamic_fee.pb.go",
        "errors.go",
        "gasmeter.go",
        "hdpath.go",
        "indexer.go",
        "indexer.pb.go",
        "int.go",
        "protocol.go",
        "validation.go",
        "web3.pb.go",
    ],
    importpath = "swisstronik/types",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cosmos_cosmos_proto//:cosmos-proto",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/errors",
        "@com_github_cosmos_cosmos_sdk//types/tx",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_gogoproto//gogoproto",
        "@com_github_ethereum_go_ethereum//accounts",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_gogo_protobuf//proto",
        "@com_github_tendermint_tendermint//abci/types",
        "@com_github_tendermint_tendermint//types",
        "@io_cosmossdk_errors//:errors",
        "@io_cosmossdk_math//:math",
    ],
)

go_test(
    name = "types_test",
    srcs = [
        "account_test.go",
        "benchmark_test.go",
        "chain_id_test.go",
        "validation_test.go",
    ],
    embed = [":types"],
    deps = [
        "//crypto/codec",
        "//crypto/ethsecp256k1",
        "//encoding/codec",
        "//tests",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
    ],
)
