load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ante",
    srcs = [
        "ante.go",
        "eip712.go",
        "eth.go",
        "fee_checker.go",
        "fee_market.go",
        "fees.go",
        "handler_options.go",
        "interfaces.go",
        "reject_msgs.go",
        "reject_nested_msgs.go",
        "setup.go",
        "sigverify.go",
    ],
    importpath = "swisstronik/app/ante",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto/ethsecp256k1",
        "//ethereum/eip712",
        "//types",
        "//x/evm/keeper",
        "//x/evm/types",
        "//x/feemarket/types",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//crypto/types/multisig",
        "@com_github_cosmos_cosmos_sdk//store/types",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/errors",
        "@com_github_cosmos_cosmos_sdk//types/tx",
        "@com_github_cosmos_cosmos_sdk//types/tx/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/ante",
        "@com_github_cosmos_cosmos_sdk//x/auth/migrations/legacytx",
        "@com_github_cosmos_cosmos_sdk//x/auth/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_cosmos_sdk//x/authz",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/ante",
        "@com_github_cosmos_ibc_go_v6//modules/core/keeper",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_ethereum_go_ethereum//crypto/secp256k1",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_ethereum_go_ethereum//signer/core/apitypes",
        "@com_github_tendermint_tendermint//libs/log",
        "@io_cosmossdk_errors//:errors",
        "@io_cosmossdk_math//:math",
    ],
)

go_test(
    name = "ante_test",
    srcs = [
        "ante_test.go",
        "eth_test.go",
        "fee_checker_test.go",
        "fee_market_test.go",
        "fees_test.go",
        "reject_nested_msgs_test.go",
        "setup_test.go",
        "signverify_test.go",
        "sigs_test.go",
        "utils_test.go",
    ],
    embed = [":ante"],
    deps = [
        "//app",
        "//crypto/codec",
        "//crypto/ethsecp256k1",
        "//encoding",
        "//ethereum/eip712",
        "//server/config",
        "//tests",
        "//types",
        "//x/evm/types",
        "//x/feemarket/types",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//client/tx",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/keys/ed25519",
        "@com_github_cosmos_cosmos_sdk//crypto/keys/multisig",
        "@com_github_cosmos_cosmos_sdk//crypto/keys/secp256r1",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//crypto/types/multisig",
        "@com_github_cosmos_cosmos_sdk//simapp",
        "@com_github_cosmos_cosmos_sdk//store/types",
        "@com_github_cosmos_cosmos_sdk//testutil/testdata",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/errors",
        "@com_github_cosmos_cosmos_sdk//types/module",
        "@com_github_cosmos_cosmos_sdk//types/tx",
        "@com_github_cosmos_cosmos_sdk//types/tx/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/ante",
        "@com_github_cosmos_cosmos_sdk//x/auth/migrations/legacytx",
        "@com_github_cosmos_cosmos_sdk//x/auth/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/tx",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_cosmos_sdk//x/authz",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_cosmos_cosmos_sdk//x/evidence/types",
        "@com_github_cosmos_cosmos_sdk//x/feegrant",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1:types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1beta1",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_ethereum_go_ethereum//signer/core/apitypes",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@com_github_tendermint_tendermint//abci/types",
        "@com_github_tendermint_tendermint//libs/log",
        "@com_github_tendermint_tendermint//proto/tendermint/types",
        "@io_cosmossdk_math//:math",
    ],
)
