load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "params",
    srcs = ["encoding.go"],
    importpath = "swisstronik/app/params",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
    ],
)
