load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "codec",
    srcs = ["codec.go"],
    importpath = "swisstronik/encoding/codec",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto/codec",
        "//types",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//std",
        "@com_github_cosmos_cosmos_sdk//types",
    ],
)
